<resources>
    <string name="app_name">ruletkaCSGO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="deposit">Deposit</string>
    <string name="referrals">Referrals</string>
    <string name="top">Top</string>
    <string name="games">Games</string>
    <string name="crash">Crash</string>
    <string name="roulette">Roulette</string>
    <string name="action_logout">Log Out</string>
    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="help_and_feetback"><![CDATA[Help & feedback]]></string>
    <string name="guide">Guide to APP</string>
    <string name="settings">Settings</string>
    <string name="mail">Mail</string>
    <string name="dial">Dial</string>
    <string name="map">Map</string>
</resources>
