<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/shop"/>
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/deposit"/>
        <item
            android:id="@+id/nav_referrals"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/referrals"/>
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/top"/>
    </group>
    <item android:title=""></item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crash"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/crash"/>
        <item
            android:id="@+id/nav_roulette"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/roulette"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat"/>
        >
    </group>

    <group>
            <item
                android:id="@+id/nav_support"
                android:title="@string/help_and_feetback"/>

            <item
                android:id="@+id/nav_guide"
                android:title="@string/guide"/>

            <item
                android:id="@+id/nav_about"
                android:title="@string/about"/>
    </group>

</menu>
